--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -6,8 +6,10 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{% static 'css/app.css' %}">
-  <title>{% block title %}{% endblock title %}</title>
-  {% block css %}{% endblock css %}
+  <title>{% block title %} {% endblock title %}</title>
+  {% block description %} {% endblock description %}
+  {% block tags %} {% endblock tags %}
+  {% block css %} {% endblock css %}
 </head>
 <body>
 
