--- a/blog/templates/home/index.html
+++ b/blog/templates/home/index.html
@@ -3,6 +3,14 @@
 
 {% load  static %}
 
+{% block title %} 
+    {{home.title}}
+{% endblock title %}
+
+{% block description %}
+    <meta name="description" content="{{ home.description }}">
+{% endblock description %}
+
 {% block content %}
 
 {% include "includes/header.html" %}
