--- a/blog/templates/users/register.html
+++ b/blog/templates/users/register.html
@@ -49,6 +49,9 @@
                             <label>Repetir Contraseña:
                             {{ form.password2 }}
                             </label>
+                            {% for e in e.pasword2.errors %}
+                                <p style="color: crimson;">{{ e }}</p>
+                            {% endfor %}
                         </div>
                         <button type="submit" class="cell hollow button primary">Registrar</button>
                     </form>
